Робот поехал. Добавлена страница управления. Добавлен сигнал-р хаб для связи

--- a/.gitignore
+++ b/.gitignore
@@ -267,3 +267,4 @@ __pycache__/
 /JeerowayWiki.Images/Properties/PublishProfiles/FTPProfile.pubxml
 /Web/appsettings.Release.json
 /Web/Properties/PublishProfiles/FTPProfile.pubxml
+/Web/Properties/PublishProfiles/FolderProfile.pubxml
