--- a/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1.csproj
@@ -7,4 +7,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AForge.Video.DirectShow" Version="2.2.5" />
+      <PackageReference Include="System.Drawing.Common" Version="9.0.1" />
+    </ItemGroup>
+
 </Project>
