--- a/Jeeroway.Robo/package.json
+++ b/Jeeroway.Robo/package.json
@@ -12,6 +12,8 @@
   "type": "commonjs",
   "dependencies": {
     "child_process": "^1.0.2",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "raspi": "^6.0.1",
+    "raspi-serial": "^6.0.0"
   }
 }
