--- a/Jeeroway.Robo/package.json
+++ b/Jeeroway.Robo/package.json
@@ -2,8 +2,9 @@
   "name": "jeeroway.robo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,9 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "child_process": "^1.0.2",
     "express": "^5.1.0",
-    "raspi": "^6.0.1",
-    "raspi-serial": "^6.0.0"
+    "serialport": "^13.0.0"
   }
 }
