--- a/src/Jeeroway.Api/appsettings.json
+++ b/src/Jeeroway.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppConnection": "from_secrets"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
