--- a/src/Jeeroway.Api/Properties/launchSettings.json
+++ b/src/Jeeroway.Api/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://192.168.1.33:7133;http://192.168.1.33:5097",
+      "applicationUrl": "https://192.168.1.33:7133;http://192.168.1.33:5097;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
