--- a/src/Jeeroway.Api/appsettings.Development.json
+++ b/src/Jeeroway.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppConnection": "server=localhost;port=3333;database=jeerowaydb;user=root;password=1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
