--- a/src/JeerowayWiki.Images/appsettings.json
+++ b/src/JeerowayWiki.Images/appsettings.json
@@ -1,7 +1,21 @@
 {
   "ConnectionStrings": {
-    "AppConnection": "Server=(localdb)\\mssqllocaldb;Database=jeeroway;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ImgConnection": "Server=(localdb)\\mssqllocaldb;Database=jeeroway-img;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AppConnection": "from_secrets",
+    "ImgConnection": "from_secrets"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:8080"
+      },
+      "Https": {
+        "Url": "https://0.0.0.0:8443",
+        "Certificate": {
+          "Path": "/app/certs/certificate.pfx",
+          "Password": ""
+        }
+      }
+    }
   },
   "Logging": {
     "LogLevel": {
