--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -45,6 +45,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
     <PackageVersion Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.8" />
-    <PackageVersion Include="System.Drawing.Common" Version="9.0.11" />
+    <PackageVersion Include="SixLabors.ImageSharp" Version="3.1.6" />
   </ItemGroup>
 </Project>
