--- a/src/JeerowayWiki.Images/JeerowayWiki.Images.csproj
+++ b/src/JeerowayWiki.Images/JeerowayWiki.Images.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <UserSecretsId>c36fc7a0-f8ac-4b95-9fad-34e5cf985af6</UserSecretsId>
@@ -14,7 +14,7 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
-    <PackageReference Include="System.Drawing.Common" />
+    <PackageReference Include="SixLabors.ImageSharp" />
   </ItemGroup>
 
   <ItemGroup>
