--- a/.github/workflows/publish-img.yml
+++ b/.github/workflows/publish-img.yml
@@ -48,16 +48,16 @@ jobs:
           fi
 
       - name: run new container
-        run: >
-          docker run 
-          --restart unless-stopped 
-          -p 80:8080
-          -p 443:8443
-          -d 
-          --name jimgs 
-          -v /etc/letsencrypt/live/${{ secrets.DOMAIN_NAME_IMG }}:/app/certs:ro
-          --env ASPNETCORE_ENVIRONMENT=Release 
-          --env ConnectionStrings__ImgConnection=${{ secrets.MYSQLIMGDBCONNECTION }}
-          jeeroway-imgs:${{ steps.date.outputs.date }}
+        run: |
+          docker run \
+            --restart unless-stopped \
+            -p 80:8080 \
+            -p 443:8443 \
+            -d \
+            --name jimgs \
+            -v /etc/letsencrypt/live/${{ secrets.DOMAIN_NAME_IMG }}:/app/certs:ro \
+            --env ASPNETCORE_ENVIRONMENT=Release \
+            --env ConnectionStrings__ImgConnection="${{ secrets.MYSQLIMGDBCONNECTION }}" \
+            jeeroway-imgs:${{ steps.date.outputs.date }}
 
 
