--- a/src/JeerowayWiki.Images/appsettings.Production.json
+++ b/src/JeerowayWiki.Images/appsettings.Production.json
@@ -3,6 +3,13 @@
     "Endpoints": {
       "Http": {
         "Url": "http://0.0.0.0:8080"
+      },
+      "Https": {
+        "Url": "https://0.0.0.0:8443",
+        "Certificate": {
+          "Path": "/publishfolder/certs/certificate.pfx",
+          "Password": ""
+        }
       }
     }
   }
