--- a/IaC/nginx/conf/nginx.conf
+++ b/IaC/nginx/conf/nginx.conf
@@ -1,21 +1,32 @@
+#scp /Users/viktorpobochniy/proj/jeeroway/IaC/nginx/conf/nginx.conf firstvds@82.202.136.155:~/nginx/conf
+# вначале нужно запуститься без https, 
+# потом запустить certbot чтобы он создал сертификат в нужной папке
+# только потом добавить блок для https
+
 access_log off;
 server {
     listen 80;
     listen [::]:80;
 
-#    server_name jeeroway.ru www.jeeroway.ru;
+    server_name jeeroway.ru www.jeeroway.ru;
     index index.html;
     server_tokens off;
+    root /etc/nginx/html;
 
     # Certbot validation endpoint
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # Redirect HTTP to HTTPS
+    # Frontend - serve Angular app
     location / {
-        return 301 https://$host$request_uri;
+        try_files $uri $uri/ /index.html =404;
     }
+    
+    # Uncomment this block when SSL is ready to redirect HTTP to HTTPS
+    # location / {
+    #     return 301 https://$host$request_uri;
+    # }
 }
 
 server {
@@ -23,10 +34,12 @@ server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name your-domain.com www.your-domain.com;
+    server_name jeeroway.ru www.jeeroway.ru;
+    root /etc/nginx/html;
+    index index.html;
 
-    ssl_certificate /etc/nginx/ssl/live/your-domain.com/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/your-domain.com/privkey.pem;
+    ssl_certificate /etc/nginx/ssl/live/jeeroway.ru/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/jeeroway.ru/privkey.pem;
     
     # SSL optimization
     ssl_session_cache shared:SSL:10m;
@@ -41,46 +54,26 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # Images API proxy
-    location /images/ {
-        proxy_pass              http://jimgs:8080/;
-        proxy_http_version      1.1;
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
-        proxy_cache_bypass      $http_upgrade;
-        
-        # CORS headers for images
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
-        
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
-    }
-
     # Main API proxy
-    location /api/ {
-        add_header 'Access-Control-Allow-Origin' $http_origin always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range' always;
-        add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH' always;
-    
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
-        
-        proxy_pass              http://aapi:8080/api/;
-        proxy_http_version      1.1;
-        proxy_set_header        Upgrade $http_upgrade;
-        proxy_set_header        Connection keep-alive;
-        proxy_set_header        Host $host;
-        proxy_cache_bypass      $http_upgrade;
-        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header        X-Forwarded-Proto $scheme;
-    }
+#     location /api/ {
+#         add_header 'Access-Control-Allow-Origin' $http_origin always;
+#         add_header 'Access-Control-Allow-Credentials' 'true' always;
+#         add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range' always;
+#         add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH' always;
+#     
+#         if ($request_method = 'OPTIONS') {
+#             return 204;
+#         }
+#         
+#         proxy_pass              http://aapi:8080/api/;
+#         proxy_http_version      1.1;
+#         proxy_set_header        Upgrade $http_upgrade;
+#         proxy_set_header        Connection keep-alive;
+#         proxy_set_header        Host $host;
+#         proxy_cache_bypass      $http_upgrade;
+#         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header        X-Forwarded-Proto $scheme;
+#     }
     
     # Frontend
     location / {
