--- a/.github/workflows/publish-api.yml
+++ b/.github/workflows/publish-api.yml
@@ -15,10 +15,9 @@ jobs:
     steps:
       - name: checkout 🛎️
         uses: actions/checkout@v4
-      - name: setup dotnet
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
+      
+      - name: verify dotnet version
+        run: dotnet --version
 
       - name: restore
         run: dotnet restore src/Jeeroway.Api/Jeeroway.Api.csproj
