--- a/.github/workflows/publish-api.yml
+++ b/.github/workflows/publish-api.yml
@@ -25,8 +25,10 @@ jobs:
 
       - name: restore
         run: dotnet restore src/Jeeroway.Api/Jeeroway.Api.csproj
+        
       - name: build 🏗️
-        run: dotnet build src/Jeeroway.Api/Jeeroway.Api.csproj --no-restore -c Release -o ${{ env.BUILD_DIR }}
+        run: dotnet build src/Jeeroway.Api/Jeeroway.Api.csproj --no-restore -c Release
+        
       - name: publish
         run: dotnet publish src/Jeeroway.Api/Jeeroway.Api.csproj --no-build -c Release -o ${{ env.PUBLISH_DIR }}
 
