--- a/src/Jeeroway.Api/Jeeroway.Api.csproj
+++ b/src/Jeeroway.Api/Jeeroway.Api.csproj
@@ -18,6 +18,9 @@
         <None Update="recordings\NewFile1.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="Dockerfile">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
     
     <ItemGroup>
