--- a/IaC/nginx/conf/nginx.conf
+++ b/IaC/nginx/conf/nginx.conf
@@ -65,7 +65,7 @@ server {
 #             return 204;
 #         }
 #         
-#         proxy_pass              http://aapi:8080/api/;
+#         proxy_pass              http://japi:8080/api/;
 #         proxy_http_version      1.1;
 #         proxy_set_header        Upgrade $http_upgrade;
 #         proxy_set_header        Connection keep-alive;
